# Account-API

./: .gitignore  CLI.Dockerfile  Cargo.toml  LICENSE  MAIN.Dockerfile  README.md  docker-compose.yml  index.js  install.sh  package-lock.json  package.json  startup.sh
config/: .env.development  .env.production  global.env
data/: dict.yml  pref.yaml  variables.yml
data/models/: User.js  User.ts
helper/: Cargo.toml
helper/src/: lib.rs  main.rs
routes/: Api.js
src/: commands.rs  main.rs  output_handler.rs
tests/: main.test.js
